force-app/main/default/objects/Assessment_Provider_Schedule__c/Assessment_Provider_Schedule__c.object-meta.xml
<CustomObject>
    <label>Assessment Provider Schedule</label>
    <nameField>
        <displayFormat>APS-{0000}</displayFormat>
        <label>Assessment Provider Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Provider Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>