force-app/main/default/objects/Assessment_Provider_Schedule__c/fields/Assessment_Provider__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Provider__c</fullName>
    <label>Assessment Provider</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Assessment Provider account must be of type Assessment Provider.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Assessment Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Assessment_provider_schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>