force-app/main/default/objects/Assessment_Provider_Schedule__c/fields/Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Lawyer__c</fullName>
    <label>Lawyer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Lawyer contact must be of type Lawyer.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lawyers</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Assessment_provider_schedules</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>