force-app/main/default/objects/Assessment_Provider_Schedule__c/fields/Rebate_Discount__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Discount__c</fullName>
    <label>Rebate Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>