force-app/main/default/objects/Assessment_Provider_Schedule__c/fields/Rebate_Period__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Period__c</fullName>
    <label>Rebate Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>4 months</fullName>
            </value>
            <value>
                <fullName>8 months</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>16 months</fullName>
            </value>
            <value>
                <fullName>20 months</fullName>
            </value>
            <value>
                <fullName>24 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>